--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,7 +3,7 @@ $white: rgba(255,255,255,1);
 $black: rgba(0,0,0,1);
 $gray: rgba(250, 250, 250,1);
 $lightGray: rgba(240, 240, 240,1);
-
+$darkBlue: rgba(33,40,46,1);
 
 
 // Font-size
