--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -11,7 +11,6 @@
         width: 30%;
         position: absolute;
         top: 163px;
-        
 
         h2{
             font-size: 36px;
@@ -32,8 +31,20 @@
             outline: 2px solid black;
             font-weight: 700;
             text-transform: uppercase;
-            
+
+            :hover{
+                background: $white;
+            }
         }
+    }
+    .bottom-text{
+        position: absolute;
+        bottom: 0;
+        padding: 16px 22px;
+        background: #f3f3f3;
+        font-weight: 900;
+        font-size: $font-md;
+        text-transform: uppercase;
         
     }
 }
