--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -4,7 +4,7 @@ $black: rgba(0,0,0,1);
 $gray: rgba(250, 250, 250,1);
 $lightGray: rgba(240, 240, 240,1);
 $darkBlue: rgba(33,40,46,1);
-
+$gold: rgba(255,187,2,1);
 
 // Font-size
 $font-sm: 0.875rem; // 14px
