--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -11,16 +11,123 @@
         transform: translateY(-126px);
 
         > div:first-child{
-            flex-basis: 16%;
+            flex-basis: 23%;
         }
 
         > div:nth-child(2){
-            flex-basis: 40%;
+            flex-basis: 53%;
             padding-top: 60px;
         }
         
         > div:last-child{
-            flex-basis: 30%;
+            flex-basis: 20%;
+            margin-left: 30px;
+            transform: translate(30px, 10px);
         }
+        .btn{
+            display: inline-block;
+            background: $white;
+            margin-top: 50px;
+            padding: 14px 22px;
+            border-left: 5px solid #ff4229;
+            outline: 2px solid black;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+    }
+
+    &__two{
+        margin-top: calc(-126px + 54px);
+        
+        .head_text{
+            text-align: center;
+            text-transform: uppercase;
+
+            p{
+                font-weight: 30px;
+            }
+            h2{
+                font-size: 30px;
+                font-weight: 900;
+                padding-bottom: 22px;
+            }
+
+            &::after{
+                content: "";
+                display: block;
+                width: 65px;
+                height: 8px;
+                background: $gold;
+                margin: 0 auto;
+            }
+        }
+
+        .info{
+            padding: 100px 90px;
+
+            > div:first-child{
+                flex: 1 0 33%;
+            }
+
+            > div:nth-child(2){
+                flex: 1 0 33%;
+            }
+
+            > div:last-child{
+                flex: 1 0 33%;
+            }
+
+            .card1, .card2, .card3, .card4{
+                background: $white;
+                padding: 20px;
+                position: relative;
+
+                img{
+                    transform: translateY(-42px);
+                }
+
+                p{
+                    clear: both;
+                }
+            }
+
+            .card1, .card2{
+                img{
+                    float: left;
+                    margin-right: 16px;
+                }
+            }
+
+            .card3, .card4{
+                img{
+                    float: right;
+                    margin-left: 16px;
+                }
+                h3{
+                    float: right;
+                }
+            }
+
+            .card2, .card4{
+                margin-top: 90px;
+            }
+
+            .arrow{
+                width: 30px;
+                height: 30px;
+                position: absolute;
+                right: 20px;
+                transform: rotate3d(0, 1, -1,90deg);
+                bottom: -8px;
+                background: #fff;
+            }
+
+            .mobile{
+                img{
+                    transform: scale(1.1) translate(20px, -10px);
+                }
+            }
+        }
+        
     }
 }
