--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,6 +1,6 @@
 .about{
     background: #e9f1f4;
-    
+    padding-bottom: 180px;
 
     &__one{
         height: 200px;
@@ -130,4 +130,6 @@
         }
         
     }
+
+    
 }
