--- a/app/scss/_subscribe.scss
+++ b/app/scss/_subscribe.scss
@@ -94,6 +94,7 @@
             }
 
             .submit{
+                background: transparent;
                 display: block;
                 margin-top: 50px;
                 padding: 14px 22px;
