--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -57,6 +57,10 @@ ul{
         justify-content: center;
     }
 
+    &-jc-sa{
+        justify-content: space-around;
+    }
+
     &-ai-c{
         align-items: center;
     }
