--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -6,7 +6,7 @@
         padding-top: 64px;
         > div:first-child{
             flex: 1 0 40%;
-            padding: 0 30px;
+            padding-right: 30px;
             img{
                 padding: 20px 20px 10px;;
                 background: tomato;
@@ -28,7 +28,7 @@
 
             .icon{
                 i{
-                    padding: 20px 12px;
+                    padding: 20px 20px 20px 0;
                     font-size: 24px;
                 }
             }
@@ -76,4 +76,16 @@
             
         }
     }
+
+    &__three{
+        padding:65px 0 40px;
+        p{
+            background: #191e22;
+            padding: 20px;
+            text-align: center;
+
+        }
+    }
+
+
 }
