--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'header';
 @import 'banner';
 @import 'service';
+@import 'project';
 @import 'about';
 @import 'subscribe';
 @import 'client';
