--- a/app/scss/_subscribe.scss
+++ b/app/scss/_subscribe.scss
@@ -4,10 +4,18 @@
         position: relative;
         transform: translateY(-50%);
 
+        @include breakpoint-down(medium){
+            transform: none;
+        }
+
         > div:first-child{
-            flex: 1 0 40%;
+            flex-basis: 40%;
             background-color: #ebe1be;
             position: relative;
+
+            @include breakpoint-down(medium){
+                flex-basis: 100%;
+            }
 
             .scrue1{
                 position: absolute;
@@ -27,9 +35,15 @@
         }
 
         > div:last-child{
-            flex: 1 0 60%;
+            flex-basis: 60%;
             background: #21282e;
             padding: 52px 96px 52px 62px;
+
+            @include breakpoint-down(medium){
+                flex-basis: 100%;
+                padding: 52px 40px 52px 20px;
+
+            }
 
             .scrue2{
                 position: absolute;
@@ -70,11 +84,26 @@
     }
 
     &__two{
-
         margin-top: -230px;
-        > div{
-            flex: 1 0 50%;
 
+        @include breakpoint-down(medium){
+            width: 94%;
+            margin: 0 auto;
+        }
+
+        > div{
+            flex-basis:50%;
+
+            @include breakpoint-down(medium){
+                flex-basis: 100%;
+            }
+        }
+
+        > div:first-child{
+            @include breakpoint-down(medium){
+                order: 2;
+                padding: 60px 0;
+            }
             h3{
                 color: #ff4229;
                 font-weight: 900;
@@ -113,8 +142,16 @@
             height: 400px;
             overflow: hidden;
 
+            @include breakpoint-down(medium){
+                order: 1;
+            }
+
             img{
                 float: right;
+
+                @include breakpoint-down(medium){
+                    float: left;
+                }
             }
 
             
