--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -17,3 +17,11 @@ $font-xxxxl: 4rem; //64px
 
 // Font Family
 $roboto: 'Roboto', sans-serif;
+
+// Font Weight
+$fw_thin: 100;
+$fw_light: 300;
+$fw_regular: 400;
+$fw_medium: 500;
+$fw_bold: 700;
+$fw_black: 900;
