--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -12,15 +12,35 @@
         position: absolute;
         top: 163px;
 
+        @include breakpoint-down(medium){
+            width: 94%;
+            top: 70px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+        }
+
         h2{
             font-size: 36px;
-            font-weight: 900;
+            font-weight: $fw-black;
             text-transform: uppercase;
+
+            @include breakpoint-down(medium){
+                font-size: 28px;
+            }
         }
         h1{
             color: $white;
             font-size: 85.05px;
             text-transform: uppercase;
+
+            @include breakpoint-down(medium){
+                font-size: 74px;
+            }
+        }
+
+        p{
+            padding-top: 20px;
         }
 
         .btn{
@@ -28,7 +48,7 @@
             margin-top: 50px;
             padding: 14px 22px;
             border-left: 5px solid #ffbb02;
-            outline: 2px solid black;
+            outline: 2px solid $black;
             font-weight: 700;
             text-transform: uppercase;
 
@@ -43,7 +63,7 @@
         bottom: 0;
         padding: 16px 22px;
         background: #f3f3f3;
-        font-weight: 900;
+        font-weight: $fw-black;
         font-size: $font-md;
         text-transform: uppercase;
         
