--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -5,8 +5,16 @@
     &__one{
         padding-top: 64px;
         > div:first-child{
-            flex: 1 0 40%;
+            flex-basis: 40%;
             padding-right: 30px;
+
+            @include breakpoint-down(medium){
+
+                flex-basis: 94%;
+                padding: 0;
+                margin: 0 auto;
+            }
+
             img{
                 padding: 20px 20px 10px;;
                 background: tomato;
@@ -35,8 +43,14 @@
         }
 
         > div:nth-child(2){
-            flex: 1 0 30%;
+            flex-basis: 30%;
             padding:0 60px;
+
+            @include breakpoint-down(medium){
+                flex-basis: 94%;
+                padding: 0;
+                margin: 0 auto;
+            }
 
             h4{
                 color: $white;
@@ -47,12 +61,23 @@
 
             li{
                 padding: 10px 0;
+
+                @include breakpoint-down(medium){
+                    padding: 10px 30px;
+                }
+
             }
         }
 
         > div:last-child{
-            flex: 1 0 30%;
+            flex-basis: 30%;
             padding-left: 30px;
+
+            @include breakpoint-down(medium){
+                flex-basis: 94%;
+                padding: 0;
+                margin: 0 auto;
+            }
 
             h4{
                 color: $white;
@@ -77,7 +102,7 @@
         }
     }
 
-    &__three{
+    &__two{
         padding:65px 0 40px;
         p{
             background: #191e22;
