--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,7 +13,7 @@ body{
     // background: $gray;
     font-family: $roboto;
     font-size: $font-md;
-    font-weight: 400;
+    font-weight: $fw-regular;
     line-height: 1.3;
 }
 
