--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -7,11 +7,12 @@
         &-item{
             p{
                 color: #5a5f63;
-                font-weight: 300;
+                font-weight: $fw-light;
             }
             a{
                 color: $white;
-                font-weight: 500;
+                font-size: $font-sm;
+                font-weight: $fw-bold;
                 padding-right: 20px;
 
                 i{
@@ -30,18 +31,18 @@
         }
 
         .text{
-            padding: 24px;
+            padding: 20px 24px;
             text-transform: uppercase;
-            font-weight: 900;
+            font-weight: $fw-black;
             margin-right: 50px;
         }
 
         ul{
             li{
-                padding: 24px;
+                padding: 20px 24px;
                 
                 a{
-                    font-weight: 700;
+                    font-weight: $fw-bold;
                     text-transform: uppercase;
                     padding-left: 5px;
                 }
@@ -58,10 +59,10 @@
 
         .btn{
             background:  #ffbb02;
-            padding: 24px 40px 24px 44px;
+            padding: 20px 40px 20px 44px;
             text-transform: uppercase;
             color: #fff;
-            font-weight: 700;
+            font-weight: $fw-bold;
         }
     }
 }
