header navbar modified

--- a/app/scss/_client.scss
+++ b/app/scss/_client.scss
@@ -34,6 +34,12 @@
             margin: 0 auto;
             justify-content: space-between;
         }
+
+        img{
+            @include breakpoint-down(medium){
+                width: 45%;
+            }
+        }
     }
 
     .toggle{
