--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -37,13 +37,12 @@
         }
 
         .logo{
-            display: block;
             background-color: red;
             padding: 20px 24px 0;
         }
 
         .text{
-            padding: 20px 0;
+            padding: 20px 24px;
             text-transform: uppercase;
             font-weight: $fw-black;
         }
