mobile nav added

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -30,8 +30,12 @@
                 flex-basis: 20%;
                 
             }
-            > div:last-child{
+            > div:nth-child(2){
                 flex-basis: 70%;
+
+                @include breakpoint-down(medium){
+                    flex-basis: 0;
+                }
                 
             }
         }
@@ -77,5 +81,71 @@
 
             
         }
+
+        // Mobile menu
+
+        .menu{
+            padding: 20px;
+            cursor: pointer;
+            > div{
+                width: 32px;
+                height: 3px;
+                background: $black;
+            }
+            > div:not(:last-child){
+                margin-bottom: 4px;
+            }
+        }
+
+        .overlay {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: rgba(0,0,0, 0.9);
+            overflow: hidden;
+            transition: 0.5s;
+          }
+          
+          .overlay-content {
+            position: relative;
+            top: 25%;
+            width: 100%;
+            text-align: center;
+            margin-top: 30px;
+          }
+          
+          .overlay a {
+            padding: 8px;
+            text-decoration: none;
+            font-size: 36px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+          }
+          
+          .overlay a:hover, .overlay a:focus {
+            color: #f1f1f1;
+          }
+          
+          .overlay .closebtn {
+            position: absolute;
+            top: 20px;
+            right: 45px;
+            font-size: 60px;
+          }
+          
+          @media screen and (max-height: 450px) {
+            .overlay a {font-size: 20px}
+            .overlay .closebtn {
+            font-size: 40px;
+            top: 15px;
+            right: 35px;
+            }
+          }
+        
     }
 }
+
