body open class nav added

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -32,6 +32,10 @@ ul{
     list-style-type: none;
 }
 
+.open{
+    overflow: hidden;
+}
+
 .container{
     max-width: 71.25rem; // 11,40px
     margin: 0 auto;
