--- a/app/scss/_project.scss
+++ b/app/scss/_project.scss
@@ -73,12 +73,12 @@
 
         ul{
             li{
-                background: #ddd;
+                background: #eeeff0;
                 cursor: pointer;
                 position: relative;
             
                 &:not(:last-child){
-                    border-bottom: 1px solid $black;
+                    border-bottom: 1px solid #e7e7e7;
                 }
 
                 i{
@@ -90,14 +90,15 @@
                     position: absolute;
                     top: 0;
                     left: 70px;
-                    background: red;
+                    background: #ff4229;
                     z-index: 100;
                     padding: 28px 60px;
+                    text-transform: uppercase;
 
                 }
 
                 &:hover{
-                    background: red;
+                    background: #ff4229;
                 }
 
                 &:hover > p{
@@ -132,29 +133,29 @@
 
             /* Next & previous buttons */
             .prev, .next {
-            background-color: rgba(0,0,0,0.8);
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            padding: 16px;
-            margin-top: -22px;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            user-select: none;
+                background-color: #f3f3f3;
+                cursor: pointer;
+                position: absolute;
+                top: 50%;
+                width: auto;
+                padding: 16px;
+                margin-top: -22px;
+                color: $black;
+                font-weight: $fw_thin;
+                font-size: 18px;
+                transition: 0.6s ease;
+                border-radius: 0 3px 3px 0;
+                user-select: none;
             }
 
             /* Position the "next button" to the right */
             .prev {
-            left: 20px;
-            border-radius: 3px 0 0 3px;
+                left: 20px;
+                border-radius: 3px 0 0 3px;
             }
             .next {
-            right: 20px;
-            border-radius: 3px 0 0 3px;
+                right: 20px;
+                border-radius: 3px 0 0 3px;
             }
 
             /* On hover, add a black background color with a little bit see-through */
@@ -168,7 +169,7 @@
                 position: absolute;
                 bottom: 0;
                 width: 100%;
-                background: $black;
+                background: #21282e;
                 font-weight: 300;
 
                 h4{
@@ -177,28 +178,28 @@
                 }
                 p{
                     font-size: 12px;
-                    color: #21282e;
+                    color: #656c72;
                 }
             }
 
             /* Number text (1/3 etc) */
             .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
+                color: #f2f2f2;
+                font-size: 12px;
+                padding: 8px 12px;
+                position: absolute;
+                top: 0;
             }
 
             /* The dots/bullets/indicators */
             .dot {
-            cursor: pointer;
-            height: 10px;
-            width: 10px;
-            margin: 0 2px;
-            background-color: #bbb;
-            display: inline-block;
-            transition: background-color 0.6s ease;
+                cursor: pointer;
+                height: 10px;
+                width: 10px;
+                margin: 0 2px;
+                background-color: #bbb;
+                display: inline-block;
+                transition: background-color 0.6s ease;
             }
 
             .active, .dot:hover {
@@ -207,25 +208,25 @@
 
             /* Fading animation */
             .fade {
-            -webkit-animation-name: fade;
-            -webkit-animation-duration: 1.5s;
-            animation-name: fade;
-            animation-duration: 1.5s;
+                -webkit-animation-name: fade;
+                -webkit-animation-duration: 1.5s;
+                animation-name: fade;
+                animation-duration: 1.5s;
             }
 
             @-webkit-keyframes fade {
-            from {opacity: .4} 
-            to {opacity: 1}
+                from {opacity: .4} 
+                to {opacity: 1}
             }
 
             @keyframes fade {
-            from {opacity: .4} 
-            to {opacity: 1}
+                from {opacity: .4} 
+                to {opacity: 1}
             }
 
             /* On smaller screens, decrease text size */
             @media only screen and (max-width: 300px) {
-            .prev, .next,.text {font-size: 11px}
+                .prev, .next,.text {font-size: 11px}
             }
         }
 
@@ -251,7 +252,7 @@
                 position: absolute;
                 bottom: 0;
                 width: 100%;
-                background: $black;
+                background: #21282e;
                 font-weight: 300;
 
                 h4{
@@ -260,7 +261,7 @@
                 }
                 p{
                     font-size: 12px;
-                    color: #21282e;
+                    color: #656c72;
                 }
             }
 
