--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -20,6 +20,11 @@
         > div:nth-child(2){
             flex-basis: 53%;
             padding-top: 60px;
+            color: $white;
+
+            h2{
+                text-transform: uppercase;
+            }
         }
         
         > div:last-child{
@@ -32,7 +37,7 @@
             background: $white;
             margin-top: 50px;
             padding: 14px 22px;
-            border-left: 5px solid #ff4229;
+            border-left: 8px solid #ff4229;
             outline: 2px solid black;
             font-weight: 700;
             text-transform: uppercase;
