--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -41,13 +41,14 @@
 
         p{
             padding-top: 20px;
+            line-height: 1.6;
         }
 
         .btn{
             display: inline-block;
             margin-top: 50px;
             padding: 14px 22px;
-            border-left: 5px solid #ffbb02;
+            border-left: 8px solid #ffbb02;
             outline: 2px solid $black;
             font-weight: 700;
             text-transform: uppercase;
