--- a/app/scss/_service.scss
+++ b/app/scss/_service.scss
@@ -3,7 +3,7 @@
 
     .nav {
 
-        background: $black;
+        background: $darkBlue;
 
         @include breakpoint-down(medium){
             justify-content: flex-start;
@@ -13,11 +13,11 @@
         li{
 
             position: relative;
-            background: $black;
+            background: $darkBlue;
             padding: 40px 20px;
 
             .inner{
-                background: $black;
+                background: $darkBlue;
                 position: absolute;
                 width: 20px;
                 height: 20px;
@@ -164,7 +164,7 @@
             display: inline-block;
             margin-top: 50px;
             padding: 14px 22px;
-            border-left: 5px solid #ff4229;
+            border-left: 8px solid #ff4229;
             outline: 2px solid $black;
             font-weight: 700;
             text-transform: uppercase;
