--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -22,8 +22,27 @@
         }
     }
 
+    .fixed{
+        top: 0;
+        @include breakpoint-down(medium){
+            top: 0;
+        }
+    }
+
     &__two{
+        position: fixed;
+        top: 38px;
+        background: #fff;
+        left: 0;
+        right: 0;
+        z-index: 9999;
         box-shadow: 0px 4px 2px 0 #eee;
+        transition: all .3s ease-in-out;
+
+        @include breakpoint-down(medium){
+            top: 0;
+        }
+        
 
         .navbar{
             > div:first-child{
@@ -41,7 +60,7 @@
         }
 
         .logo{
-            background-color: red;
+            background-color: #ff4229;
             padding: 20px 24px 0;
         }
 
@@ -61,8 +80,11 @@
                     padding-left: 5px;
                 }
 
-                a:hover:not(:last-child){
-                    border-left: 2px solid red;
+                &:not(:last-child){
+
+                    a:hover{
+                        border-left: 2px solid #ff4229;
+                    }
                 }
 
                 &:last-child{
@@ -78,7 +100,7 @@
                 }
             }
             :first-child a{
-                border-left: 2px solid red;
+                border-left: 2px solid #ff4229;
                 
             }
 
@@ -127,7 +149,7 @@
             padding: 8px;
             text-decoration: none;
             font-size: 36px;
-            color: #818181;
+            color: $white;
             display: block;
             transition: 0.3s;
           }
